--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+
+
         <canvas id="canvasBg" width="800" height="600"></canvas>
+
         <div id="overlapping">
-            <canvas id="canvasEntities" width="800" height"600"></canvas>
-            </div>
-            <script src="game.js"></script>
-        </body>
-    </html>
-            
+            <canvas id="canvasEntities" width="800" height="600"></canvas>
+        </div>
+
+        <script src="game.js"></script>
+
+
+    </body>
+</html>
